Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-15168

Unexpected ER_VERS_ENGINE_UNSUPPORTED upon dropping versioning on a partitioned table

    XMLWordPrintable

Details

    Description

      10.3 1951e7f05ae7b6069eeffdfe8ab304fa3a18a85a

      MariaDB [test]> CREATE OR REPLACE TABLE t (a INT) WITH SYSTEM VERSIONING PARTITION BY SYSTEM_TIME (PARTITION p1 HISTORY, PARTITION pn CURRENT);
      Query OK, 0 rows affected (0.66 sec)
       
      MariaDB [test]> ALTER TABLE t DROP SYSTEM VERSIONING;
      ERROR 4109 (HY000): Transaction system versioning for `#sql-69b8_a` is not supported
      

      I can understand why ALTER has to fail, but the error code/message doesn't look right.

      Attachments

        Activity

          People

            kevg Eugene Kosov (Inactive)
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - Not Specified
                Not Specified
                Logged:
                Time Spent - 0.25h
                0.25h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.